@@ -1,3 +1,7 @@
+20100306 mnemogogo-1.1.3
+* Add logging support to phone library.
+* Silently ignore problems with htmlentitydefs.
+
 20100223 mnemogogo-1.1.2
 * Add support for Android demos.
 * Fix error: `No module named htmlentitydefs'.
